revised the bibo

--- a/biography.html
+++ b/biography.html
@@ -112,18 +112,18 @@
         <p>Haoyu Chen is a Master student at EECS, and a PhD student at Civil Engineering, UC Berkeley. He also got his M.A. degree at Statistics, UC Berkeley.</p>
         <span class="left"><img src="images/thu.jpg" alt="Tsinghua Univ logo" /></span>
         <p>
-          2007 Fall - 2011 Summer, Haoyu Chen was a undergraduate student at Tsinghua University, Beijing, China. He received his B.S. in Civil Engineering and B.S. in Economics from Tsinghua University concurrently. His GPA ranks the first in the department (among 120 students).
+          2007 Fall - 2011 Summer, Haoyu Chen was a undergraduate student at <strong>Tsinghua University</strong>, Beijing, China. He received his B.S. in Civil Engineering and B.S. in Economics from Tsinghua University concurrently. His GPA ranks the first in the department (among 120 students).
         </p>
-        <P> He joined University of California, Berkeley 2011 Fall. </p>
+        <P> He joined <strong>University of California, Berkeley</strong> as a graduate student 2011 Fall. </p>
         <span class="center"><img src="images/cal.jpg" alt="mid image" /></span>
 
         <span class="right"><img src="images/stats.jpg" alt="stats" /></span>
         <p>
-          He received the master of art at statistics at University of California, Berkeley 2014 Summer.
+          He received the master of art at <strong>statistics</strong> at University of California, Berkeley 2014 Summer.
         </p>
         <span class="right"><img src="images/eecs.jpg" alt="eecs" style = "width:70%;"/></span>
         <p>
-          He joined the department of EECS at University of California, Berkeley as a master of science student 2014 Fall. The estimated graduation time for his is December of 2015. Meanwhile, he will receive his PhD degree at CEE. 
+          He joined the department of <strong>EECS</strong> at University of California, Berkeley as a master of science student 2014 Fall. The estimated graduation time for his is December of 2015. Meanwhile, he will receive his PhD degree at CEE. 
         </p>
         <h2>Resume of Haoyu Chen</h2>
         <a href="pdf/HaoyuChenResume.pdf">Click here to download the PDF of resume.</a>
