--- a/projects.html
+++ b/projects.html
@@ -90,6 +90,9 @@
 
         <h2><a name = "C1">Parallel Computing </a></h2>
         <h3>Accelerate GPU Convolutional Neural Network (CNN, one deep learning strategy) with Auto-tuning</h3>
+
+        <p>Convolutional Neural Network (CNN) is a powerful tool in machine learning area, it can handle the problems in image classification and signal process. However, it requires a large mount of the traning time for this system. Thus, there are tons of efforts to speedup the traning process. Because of the property of convolutional calculation, GPU acceleration is applied to speedup the CNN. However, in the different layers, the size of input images varies largely, which decreases the efficiency of the convolution. </p>
+
         <p> In this project, we concatenate multiple input images into one batch. Thus, we create larger matrix per cuBlas call. In order to do the auto-tuning, we create an extra-parameter v, which represents the new size of images. Auto-tuning v for peak performance in different layers can optimize the system for different computer. We speedup the Caffe (Berkeley CNN framework, the fastest open source one as we know) 1.5-2 times. </p>
         
         <h3>Accelerate image blur and scan</h3>
